# LUCA

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: python3-ubuntu.yml
artifact/data/: voc_data.py
artifact/doc/: pipeline.md  tfsetup.md
artifact/model/: mob3yolo3_model.py
install/py/: requirements.actions.txt  requirements.dev.txt  requirements.txt
src/tensorflow/data/voc/: data.py
src/tensorflow/loss/voc/: loss.py
src/tensorflow/model/interface/: network_bbox.py
src/tensorflow/model/mobilenetv3_yolov3/: _paths.py  model.py
src/tensorflow/utils/: decorator.py  fixmypy.py
tst/misc/model/: mob3yolo3_model.py
tst/tensorflow/data/voc/: test_data.py  voc.tfrecord
tst/tensorflow/loss/voc/: test_loss.py
tst/tensorflow/model/interface/: test_network_bbox.py
tst/tensorflow/model/mobilenetv3_yolov3/: output_shape.txt  test_model.py
tst/tensorflow/utils/: test_decorator.py
