[metadata]
name = luca
description = LUCA
author = Leo Leung

[options]
zip_safe = False
packages = find:
include_package_data = True
setup_requires = setuptools_scm
package_dir =
    = src


[options.packages.find]
where = src
exclude =
    tst

[options.extras_require]
testing =
    pytest
    pytest-cov
    pytest-mock
linting =
    black==22.3.0
    isort==5.10.1
    flake8==4.0.1

[tool:pytest]
testpaths =
    tst
addopts =
    --cov src
    --cov-report term-missing
    --disable-warnings
    --verbose
norecursedirs =
    dist
    build
    .tox
    resources
    .venv
    artifact
    install
    react
    notebooks

[tool.setuptools_scm]
version_scheme = guess-next-dev

[bdist_wheel]
universal = 1

[flake8]
ignore = E203 W503 W291 W293
max-line-length = 79
exclude =
    .tox
    dist
    .eggs
    .venv
    log
    model
    resources
    artifact
    install
